# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  README.md
module_1_assignment/include/: robot_class.h  sensor_lib.h
module_1_assignment/src/: robot_class.cpp  robot_main.cpp  robot_sensors.cpp  sensor_main.cpp
module_2_assignment/: CMakeLists.txt  Readme.md
module_2_assignment/launch/: 5_turtlesim.launch.py  pattern.launch.py
module_2_assignment/src/: move_turtle.cpp  patter_node.cpp
module_3_assignment/: CMakeLists.txt  Readme.md  package.xml
module_3_assignment/config/: urdf_view1.rviz
module_3_assignment/launch/: ackerman.launch.py  robot_arm1.launch.py  robot_arm2.launch.py  robot_lift_debug.launch.py  robot_wheeled_arm.launch.py
module_3_assignment/urdf/: ackerman.urdf  arm_3dof_1.urdf  arm_3dof_2.urdf  wheeled_robot_lift_corrected.urdf  wheeled_with_arm.urdf
module_4_assessment/module_4_assignment/: CMakeLists.txt  Readme.md  line_following_with_camera.cpp
module_4_assessment/module_4_assignment/launch/: square.launch.py
module_4_assessment/module_4_assignment/models/: model.sdf
module_4_assessment/module_4_assignment/src/: square_solving_with_lidar.cpp
module_4_assessment/module_4_assignment/worlds/: square.world
